# batfish

./: bgp_session_capabilities.py  check_bgp_status.py  pyproject.toml  readme.md  script1.py
snapshots/automation-pod01/configs/: c8k1.cfg  c8k2.cfg
