[tool.poetry]
name = "batfish"
version = "0.1.0"
description = ""
authors = ["Sandeep <sandeepsuresh2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybatfish = "^2022.9.7.77"
jedi = "^0.18.2"
rich = "^13.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
